[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lost"
version = "0.0.1"
description = "LoST Protocol Reimagined"
authors = [
  { name = "Jan Janak", email = "jan@janakj.org" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/irtlab/lost"
"Bug Tracker" = "https://github.com/irtlab/lost/issues"